standarize the functiondefinition and function for function description and output for llm to call the function

--- a/developer_notes/tools.ipynb
+++ b/developer_notes/tools.ipynb
@@ -2,28 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "response: ChatCompletion(id='chatcmpl-9dWmVQy1xgb31fADXeeOBqj0vmF8v', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_FImFEP4gWFQ48VlzDIpboe32', function=Function(arguments='{\"weather\": {\"temperature\": 0, \"location\": \"San Francisco\", \"unit\": \"celsius\"}}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_NCcmz1S5vTLhNEltLtnAzko8', function=Function(arguments='{\"weather\": {\"temperature\": 0, \"location\": \"Tokyo\", \"unit\": \"celsius\"}}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_lY5OkrEnHE6o0rcb7qHD2Pow', function=Function(arguments='{\"weather\": {\"temperature\": 0, \"location\": \"Paris\", \"unit\": \"celsius\"}}', name='get_current_weather'), type='function')]))], created=1719207831, model='gpt-4o-2024-05-13', object='chat.completion', service_tier=None, system_fingerprint='fp_9cb5d38cf7', usage=CompletionUsage(completion_tokens=96, prompt_tokens=75, total_tokens=171))\n",
-      "tool_calls: [ChatCompletionMessageToolCall(id='call_FImFEP4gWFQ48VlzDIpboe32', function=Function(arguments='{\"weather\": {\"temperature\": 0, \"location\": \"San Francisco\", \"unit\": \"celsius\"}}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_NCcmz1S5vTLhNEltLtnAzko8', function=Function(arguments='{\"weather\": {\"temperature\": 0, \"location\": \"Tokyo\", \"unit\": \"celsius\"}}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_lY5OkrEnHE6o0rcb7qHD2Pow', function=Function(arguments='{\"weather\": {\"temperature\": 0, \"location\": \"Paris\", \"unit\": \"celsius\"}}', name='get_current_weather'), type='function')]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'lower'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 96\u001b[0m\n\u001b[1;32m     91\u001b[0m         second_response \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[1;32m     92\u001b[0m             model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     93\u001b[0m             messages\u001b[38;5;241m=\u001b[39mmessages,\n\u001b[1;32m     94\u001b[0m         )  \u001b[38;5;66;03m# get a new response from the model where it can see the function response\u001b[39;00m\n\u001b[1;32m     95\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m second_response\n\u001b[0;32m---> 96\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mrun_conversation\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[0;32mIn[13], line 79\u001b[0m, in \u001b[0;36mrun_conversation\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m     function_to_call \u001b[38;5;241m=\u001b[39m available_functions[function_name]\n\u001b[1;32m     78\u001b[0m     function_args \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(tool_call\u001b[38;5;241m.\u001b[39mfunction\u001b[38;5;241m.\u001b[39marguments)\n\u001b[0;32m---> 79\u001b[0m     function_response \u001b[38;5;241m=\u001b[39m \u001b[43mfunction_to_call\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     80\u001b[0m \u001b[43m        \u001b[49m\u001b[43mlocation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfunction_args\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlocation\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     81\u001b[0m \u001b[43m        \u001b[49m\u001b[43munit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfunction_args\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43munit\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     82\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     83\u001b[0m     messages\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m     84\u001b[0m         {\n\u001b[1;32m     85\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtool_call_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: tool_call\u001b[38;5;241m.\u001b[39mid,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     89\u001b[0m         }\n\u001b[1;32m     90\u001b[0m     )  \u001b[38;5;66;03m# extend conversation with function response\u001b[39;00m\n\u001b[1;32m     91\u001b[0m second_response \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[1;32m     92\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpt-4o\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     93\u001b[0m     messages\u001b[38;5;241m=\u001b[39mmessages,\n\u001b[1;32m     94\u001b[0m )  \u001b[38;5;66;03m# get a new response from the model where it can see the function response\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[13], line 13\u001b[0m, in \u001b[0;36mget_current_weather\u001b[0;34m(location, unit)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_current_weather\u001b[39m(location, unit\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfahrenheit\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m     12\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Get the current weather in a given location\"\"\"\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtokyo\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlocation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlower\u001b[49m():\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m json\u001b[38;5;241m.\u001b[39mdumps({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocation\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTokyo\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemperature\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m10\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munit\u001b[39m\u001b[38;5;124m\"\u001b[39m: unit})\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msan francisco\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m location\u001b[38;5;241m.\u001b[39mlower():\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'lower'"
+      "response: ChatCompletion(id='chatcmpl-9e2lZetnCX7GZnscApud6eseKKLlQ', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_rYuJw6IYXK0rAwgL5oG0lB8r', function=Function(arguments='{\"location\": \"San Francisco, CA\", \"unit\": \"celsius\"}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_r4LiJjHWVEPv2L4GSedxQMq7', function=Function(arguments='{\"location\": \"Tokyo, Japan\", \"unit\": \"celsius\"}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_2LnmgGhUzy3LSDjqXIy9vLPb', function=Function(arguments='{\"location\": \"Paris, France\", \"unit\": \"celsius\"}', name='get_current_weather'), type='function')]))], created=1719330781, model='gpt-4o-2024-05-13', object='chat.completion', service_tier=None, system_fingerprint='fp_5e6c71d4a8', usage=CompletionUsage(completion_tokens=83, prompt_tokens=88, total_tokens=171))\n",
+      "tool_calls: [ChatCompletionMessageToolCall(id='call_rYuJw6IYXK0rAwgL5oG0lB8r', function=Function(arguments='{\"location\": \"San Francisco, CA\", \"unit\": \"celsius\"}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_r4LiJjHWVEPv2L4GSedxQMq7', function=Function(arguments='{\"location\": \"Tokyo, Japan\", \"unit\": \"celsius\"}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_2LnmgGhUzy3LSDjqXIy9vLPb', function=Function(arguments='{\"location\": \"Paris, France\", \"unit\": \"celsius\"}', name='get_current_weather'), type='function')]\n",
+      "ChatCompletion(id='chatcmpl-9e2lbUry9oh4BSVBTvYBmVHkiUt6H', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='Here are the current temperatures:\\n\\n- **San Francisco:** 22°C \\n- **Tokyo:** 10°C\\n- **Paris:** 22°C', role='assistant', function_call=None, tool_calls=None))], created=1719330783, model='gpt-4o-2024-05-13', object='chat.completion', service_tier=None, system_fingerprint='fp_3e7d703517', usage=CompletionUsage(completion_tokens=30, prompt_tokens=176, total_tokens=206))\n"
      ]
     }
    ],
@@ -31,6 +19,7 @@
     "# first check the openai's function call apis\n",
     "\n",
     "from openai import OpenAI\n",
+    "from openai.types import FunctionDefinition\n",
     "from lightrag.utils import setup_env\n",
     "import json\n",
     "\n",
@@ -61,23 +50,13 @@
     "                \"parameters\": {\n",
     "                    \"type\": \"object\",\n",
     "                    \"properties\": {\n",
-    "                    #     \"location\": {\n",
-    "                    #         \"type\": \"string\",\n",
-    "                    #         \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
-    "                    #     },\n",
-    "                    #     \"unit\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"]},\n",
-    "                        \"weather\":\n",
-    "                        {\n",
-    "                            \"type\": \"object\",\n",
-    "                            \"properties\": {\n",
-    "                                \"temperature\": {\"type\": \"number\"},\n",
-    "                                \"location\": {\"type\": \"string\"},\n",
-    "                                \"unit\": {\"type\": \"string\"},\n",
-    "                            },\n",
-    "                            \"required\": [\"temperature\", \"location\", \"unit\"],\n",
-    "                        }\n",
+    "                        \"location\": {\n",
+    "                            \"type\": \"string\",\n",
+    "                            \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
+    "                        },\n",
+    "                        \"unit\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"]},\n",
     "                    },\n",
-    "                    \"required\": [\"weather\"],\n",
+    "                    \"required\": [\"location\"],\n",
     "                },\n",
     "            },\n",
     "        }\n",
@@ -105,11 +84,13 @@
     "        for tool_call in tool_calls:\n",
     "            function_name = tool_call.function.name\n",
     "            function_to_call = available_functions[function_name]\n",
-    "            function_args = json.loads(tool_call.function.arguments)\n",
-    "            function_response = function_to_call(\n",
-    "                location=function_args.get(\"location\"),\n",
-    "                unit=function_args.get(\"unit\"),\n",
-    "            )\n",
+    "            function_args = json.loads(tool_call.function.arguments)# use json.loads to convert a string to a dictionary\n",
+    "            # function_response = function_to_call(\n",
+    "            #     location=function_args.get(\"location\"),\n",
+    "            #     unit=function_args.get(\"unit\"),\n",
+    "            # ) \n",
+    "            # you have to exactly know the arguments, this does not make sense. How would i know its arguments. **function_args (makes more sense)\n",
+    "            function_response = function_to_call(**function_args)\n",
     "            messages.append(\n",
     "                {\n",
     "                    \"tool_call_id\": tool_call.id,\n",
@@ -125,6 +106,37 @@
     "        return second_response\n",
     "print(run_conversation())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function(arguments='{\"location\": \"Tokyo, Japan\", \"unit\": \"celsius\"}', name='get_current_weather'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two important pieces. Getting function schema is not difficult and can be standarized.\n",
+    "\n",
+    "The second piece is how to call the function, and how to execute it. The how to call the function depends on how we execute it.\n",
+    "\n",
+    "How to execute a function:\n",
+    "1. Eval (LLM will output the code to call the function (in string format))-> Language generation.\n",
+    "2. We manage a function map, and we ask LLm to output either the code string or a structure with the function name and the arguments. We can use the function map to call the function. If its code string, we will have to parse the function call into the name and the arguments. If its a structure, we will have to convert it to data structure that can be used to call the function.\n",
+    "\n",
+    "There are just so many different ways to do the actual function call, and different LLM might react differetntly in accuracy to each output format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
