add test case for function expr parsing and adapt react agent to use class Function, FunctionDefinition, FunctionExpression

--- a/developer_notes/tools.ipynb
+++ b/developer_notes/tools.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LightRAG get a function"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -106,6 +115,13 @@
     "        return second_response\n",
     "print(run_conversation())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
