clean up and note

--- a/developer_notes/tools.ipynb
+++ b/developer_notes/tools.ipynb
@@ -2,28 +2,134 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ChatCompletion(id='chatcmpl-9ejxuyW8plusyfYrsycw5tB8E41yo', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_O9SuzUHvcbI2pc5ExAiOxV97', function=Function(arguments='{\"location\": \"San Francisco, CA\"}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_MMp8a5gYKLULm4jdJYRO6VVP', function=Function(arguments='{\"location\": \"Tokyo, Japan\"}', name='get_current_weather'), type='function'), ChatCompletionMessageToolCall(id='call_tjMDtDziuS3DA2ZTaV5y9Vic', function=Function(arguments='{\"location\": \"Paris, France\"}', name='get_current_weather'), type='function')]))], created=1719496838, model='gpt-4o-2024-05-13', object='chat.completion', service_tier=None, system_fingerprint='fp_ce0793330f', usage=CompletionUsage(completion_tokens=68, prompt_tokens=85, total_tokens=153))\n",
+      "ChatCompletion(id='chatcmpl-9ejxwzAPWC8Hj326Vc5CmpUv6P83a', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content=\"Here's the current weather:\\n\\n- **San Francisco, CA**: 72°F\\n- **Tokyo, Japan**: 10°C\\n- **Paris, France**: 22°C\", role='assistant', function_call=None, tool_calls=None))], created=1719496840, model='gpt-4o-2024-05-13', object='chat.completion', service_tier=None, system_fingerprint='fp_ce0793330f', usage=CompletionUsage(completion_tokens=38, prompt_tokens=151, total_tokens=189))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "import json\n",
+    "from lightrag.utils import setup_env\n",
+    "\n",
+    "client = OpenAI()\n",
+    "\n",
+    "# Example dummy function hard coded to return the same weather\n",
+    "# In production, this could be your backend API or an external API\n",
+    "def get_current_weather(location, unit=\"fahrenheit\"):\n",
+    "    \"\"\"Get the current weather in a given location\"\"\"\n",
+    "    if \"tokyo\" in location.lower():\n",
+    "        return json.dumps({\"location\": \"Tokyo\", \"temperature\": \"10\", \"unit\": unit})\n",
+    "    elif \"san francisco\" in location.lower():\n",
+    "        return json.dumps({\"location\": \"San Francisco\", \"temperature\": \"72\", \"unit\": unit})\n",
+    "    elif \"paris\" in location.lower():\n",
+    "        return json.dumps({\"location\": \"Paris\", \"temperature\": \"22\", \"unit\": unit})\n",
+    "    else:\n",
+    "        return json.dumps({\"location\": location, \"temperature\": \"unknown\"})\n",
+    "\n",
+    "def run_conversation():\n",
+    "    # Step 1: send the conversation and available functions to the model\n",
+    "    messages = [{\"role\": \"user\", \"content\": \"What's the weather like in San Francisco, Tokyo, and Paris?\"}]\n",
+    "    tools = [\n",
+    "        {\n",
+    "            \"type\": \"function\",\n",
+    "            \"function\": {\n",
+    "                \"name\": \"get_current_weather\",\n",
+    "                \"description\": \"Get the current weather in a given location\",\n",
+    "                \"parameters\": {\n",
+    "                    \"type\": \"object\",\n",
+    "                    \"properties\": {\n",
+    "                        \"location\": {\n",
+    "                            \"type\": \"string\",\n",
+    "                            \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
+    "                        },\n",
+    "                        \"unit\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"]},\n",
+    "                    },\n",
+    "                    \"required\": [\"location\"],\n",
+    "                },\n",
+    "            },\n",
+    "        }\n",
+    "    ]\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=messages,\n",
+    "        tools=tools,\n",
+    "        tool_choice=\"auto\",  # auto is default, but we'll be explicit\n",
+    "    )\n",
+    "    print(response)\n",
+    "    response_message = response.choices[0].message\n",
+    "    tool_calls = response_message.tool_calls\n",
+    "    # Step 2: check if the model wanted to call a function\n",
+    "    if tool_calls:\n",
+    "        # Step 3: call the function\n",
+    "        # Note: the JSON response may not always be valid; be sure to handle errors\n",
+    "        available_functions = {\n",
+    "            \"get_current_weather\": get_current_weather,\n",
+    "        }  # only one function in this example, but you can have multiple\n",
+    "        messages.append(response_message)  # extend conversation with assistant's reply\n",
+    "        # Step 4: send the info for each function call and function response to the model\n",
+    "        for tool_call in tool_calls:\n",
+    "            function_name = tool_call.function.name\n",
+    "            function_to_call = available_functions[function_name]\n",
+    "            function_args = json.loads(tool_call.function.arguments)\n",
+    "            function_response = function_to_call(\n",
+    "                location=function_args.get(\"location\"),\n",
+    "                unit=function_args.get(\"unit\"),\n",
+    "            )\n",
+    "            messages.append(\n",
+    "                {\n",
+    "                    \"tool_call_id\": tool_call.id,\n",
+    "                    \"role\": \"tool\",\n",
+    "                    \"name\": function_name,\n",
+    "                    \"content\": function_response,\n",
+    "                }\n",
+    "            )  # extend conversation with function response\n",
+    "        second_response = client.chat.completions.create(\n",
+    "            model=\"gpt-4o\",\n",
+    "            messages=messages,\n",
+    "        )  # get a new response from the model where it can see the function response\n",
+    "        return second_response\n",
+    "print(run_conversation())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
     "from typing import Any, Dict, List, Tuple\n",
     "import numpy as np\n",
+    "import time\n",
+    "import asyncio\n",
     "\n",
     "def multiply(a: int, b: int) -> int:\n",
     "    \"\"\"Multiply two numbers.\"\"\"\n",
+    "    time.sleep(1)\n",
     "    return a * b\n",
     "\n",
     "def add(a: int, b: int) -> int:\n",
     "    \"\"\"Add two numbers.\"\"\"\n",
+    "    time.sleep(1)\n",
     "    return a + b\n",
     "\n",
-    "def divide(a: float, b: float) -> float:\n",
+    "async def divide(a: float, b: float) -> float:\n",
     "    \"\"\"Divide two numbers.\"\"\"\n",
+    "    await asyncio.sleep(1)\n",
     "    return float(a) / b\n",
+    "\n",
     "\n",
     "async def search(query: str) -> List[str]:\n",
     "    \"\"\"Search for query and return a list of results.\"\"\"\n",
+    "    await asyncio.sleep(1)\n",
     "    return [\"result1\" + query, \"result2\" + query]\n",
     "\n",
     "\n",
@@ -47,10 +153,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FunctionTool(fn: <function multiply at 0x14d9d3f60>, async: False, definition: FunctionDefinition(func_name='multiply', func_desc='multiply(a: int, b: int) -> int\\nMultiply two numbers.', func_parameters={'type': 'object', 'properties': {'a': {'type': 'int'}, 'b': {'type': 'int'}}, 'required': ['a', 'b']}))\n",
+      "FunctionTool(fn: <function add at 0x14d9e4040>, async: False, definition: FunctionDefinition(func_name='add', func_desc='add(a: int, b: int) -> int\\nAdd two numbers.', func_parameters={'type': 'object', 'properties': {'a': {'type': 'int'}, 'b': {'type': 'int'}}, 'required': ['a', 'b']}))\n",
+      "FunctionTool(fn: <function divide at 0x14d9e40e0>, async: True, definition: FunctionDefinition(func_name='divide', func_desc='divide(a: float, b: float) -> float\\nDivide two numbers.', func_parameters={'type': 'object', 'properties': {'a': {'type': 'float'}, 'b': {'type': 'float'}}, 'required': ['a', 'b']}))\n",
+      "FunctionTool(fn: <function search at 0x14d9e4180>, async: True, definition: FunctionDefinition(func_name='search', func_desc='search(query: str) -> List[str]\\nSearch for query and return a list of results.', func_parameters={'type': 'object', 'properties': {'query': {'type': 'str'}}, 'required': ['query']}))\n",
+      "FunctionTool(fn: <function numpy_sum at 0x14d9e4220>, async: False, definition: FunctionDefinition(func_name='numpy_sum', func_desc='numpy_sum(arr: numpy.ndarray) -> float\\nSum the elements of an array.', func_parameters={'type': 'object', 'properties': {'arr': {'type': 'ndarray'}}, 'required': ['arr']}))\n",
+      "FunctionTool(fn: <function add_points at 0x14d9e4360>, async: False, definition: FunctionDefinition(func_name='add_points', func_desc='add_points(p1: __main__.Point, p2: __main__.Point) -> __main__.Point\\nNone', func_parameters={'type': 'object', 'properties': {'p1': {'type': 'Point', 'properties': {'x': {'type': 'int'}, 'y': {'type': 'int'}}, 'required': ['x', 'y']}, 'p2': {'type': 'Point', 'properties': {'x': {'type': 'int'}, 'y': {'type': 'int'}}, 'required': ['x', 'y']}}, 'required': ['p1', 'p2']}))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# describing the functions\n",
+    "\n",
+    "from lightrag.core.func_tool import FunctionTool\n",
+    "\n",
+    "\n",
+    "tools = [\n",
+    "    FunctionTool(fn=fn) for fn in [multiply, add, divide, search, numpy_sum, add_points]\n",
+    "]\n",
+    "for tool in tools:\n",
+    "    print(tool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'func_name': 'get_current_weather',\n",
+       " 'func_desc': \"get_current_weather(location, unit='fahrenheit')\\nGet the current weather in a given location\",\n",
+       " 'func_parameters': {'type': 'object',\n",
+       "  'properties': {'location': {'type': 'Any'},\n",
+       "   'unit': {'type': 'Any', 'default': 'fahrenheit'}},\n",
+       "  'required': ['location']}}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# tool definition for get_current_weather\n",
+    "\n",
+    "ft = FunctionTool(fn=get_current_weather)\n",
+    "ft.definition.to_dict()"
+   ]
   },
   {
    "cell_type": "code",
